--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,60 @@
 .app-container {
   flex: 0.99;
 }
+
+input {
+  border: none;
+  background: hsl(0, 0%, 93%);
+  border-radius: 0.25rem;
+  padding: 0.75rem 1rem;
+  color: black;
+}
+
+input:focus {
+  outline: none;
+  border-bottom: 0.3rem solid #f1c40f;
+}
+
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+select {
+  border: none;
+  background: hsl(0, 0%, 93%);
+  border-radius: 0.25rem;
+  padding: 0.75rem 1rem;
+  color: black;
+}
+
+button:hover {
+  background-position: 0;
+}
+
+button {
+  box-sizing: border-box;
+  appearance: none;
+  background-color: transparent;
+  background-image: linear-gradient(45deg, #24252a 50%, transparent 50%);
+  background-position: 100%;
+  background-size: 400%;
+  border: 2px solid #24252a;
+  border-radius: 0.6em;
+  color: #fff;
+  cursor: pointer;
+  align-self: center;
+  font-size: 1rem;
+  line-height: 1;
+  margin: 20px;
+  padding: 1em 2.6em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  transition: background 300ms ease-in-out;
+}
+
+button:focus {
+  outline: none;
+}
