--- a/src/Layout/Dashboard/Dashboard.css
+++ b/src/Layout/Dashboard/Dashboard.css
@@ -1,7 +1,16 @@
 .wizard-container {
+    width: 35rem;
+    height: 30rem;
     display: flex;
     justify-content: center;
     margin-top: 2rem;
+    background-color: #fdb44b;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+        rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+        rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 @media screen and (min-width: 800px) {
@@ -14,4 +23,3 @@
         transform: translate(-50%, -50%);
     }
 }
-
