adjust number input styles

--- a/src/Components/Inputs/NumberInput/NumberInput.css
+++ b/src/Components/Inputs/NumberInput/NumberInput.css
@@ -1,8 +1,10 @@
-.number-input {
+.number-input--container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 0.5rem;
 }
 
-
+.number-input {
+    width: 37%;
+}
