--- a/src/Components/Inputs/NumberInput/CustomInputField.css
+++ b/src/Components/Inputs/NumberInput/CustomInputField.css
@@ -1,10 +1,10 @@
-.number-input--container {
+.custom-input--container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 0.5rem;
 }
 
-.number-input {
+.custom-input {
     width: 37%;
 }
