adjust step and custom input styles.

--- a/src/Components/Inputs/CustomInputField/CustomInputField.css
+++ b/src/Components/Inputs/CustomInputField/CustomInputField.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 0.5rem;
 }
 
 .custom-input {
     width: 37%;
+    height: 1.2rem
 }
