--- a/src/Layout/Steps/Step.css
+++ b/src/Layout/Steps/Step.css
@@ -16,14 +16,23 @@
     margin-top: 0.5rem;
 }
 
-.step-two--select-field {
+.step-two--row-container {
     display: flex;
     align-items: center;
     margin-top: 0.5rem;
-    flex-wrap: nowrap;
     justify-content: center;
+    flex-direction: row;
 }
 
+.step-two--select-field {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.remove-btn--container {
+    margin-top: 1.8rem;
+}
 
 #sex,
 #age,
@@ -34,4 +43,9 @@
 .step-one--button-container {
     display: flex;
     justify-content: flex-end;
+}
+
+.step-two--button-container {
+    display: flex;
+    justify-content: space-between;
 }
