--- a/src/Layout/Steps/Step.css
+++ b/src/Layout/Steps/Step.css
@@ -49,3 +49,16 @@
     display: flex;
     justify-content: space-between;
 }
+
+.summary--container {
+    width: 60rem;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3rem;
+}
+
+table,
+th,
+td {
+    border: 1px solid black;
+}
